# mq2db

./: README.md  example.yaml  pyproject.toml
src/mq2db/: __init__.py  __main__.py
tests/: test_csvloader.py  test_csvloader.yaml  test_section.py  test_section.yaml
